# winsandbox

./: .gitignore  CMakeLists.txt  readme.md
src/hookdlls/: hook_filesystem.cpp  hook_messagebox.cpp
src/include/: common.hpp  files.hpp  hookbase.hpp
tests/: test_common.cpp  test_detours_base.cpp  test_detours_remote.cpp
